--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Zhonghao He</h1>
+<p>Hi! I am Zhonghao,a master student at University of Cambridge.
+    I've been working on topics including agentic risks, alignment, interpretabilty and neuroscience (upcoming). 
+
+    Utimately, I want to build AIs for human excellences (in Greek conception), which requires both sound sociatal mechanism design and epistemic tools with which individuals can better exercise their agency. 
+    A lot of efforts required to operationalize those concepts, but broadly these topics are relevant: mechanistic interpretability, computational neuroscience, AI ethics, alignment, political philosophy, virtue ethics, multi-agent systems, and human-computer interface.
+
+</p>
+
+
 </body>
 </html>
