--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh; /* Full height for centering */
-            text-align: center;
+            text-align: left;
             padding: 20px;
             box-sizing: border-box;
         }
