--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: center;
+            align-items: left;
             height: 100vh; /* Full height for centering */
             text-align: left;
             padding: 20px;
@@ -43,7 +43,7 @@
 You may read my published work on <a href="https://scholar.google.com/citations?user=PuUcZTYAAAAJ&hl=en&oi=ao">Google Scholar</a>.
 My current "Hamming Problems" are:
 <ul>
-    <li>How does knowledge diversity get lost from training and using LLM? (an ongoing research proposal aiming for ICLR)</li>
+    <li>How does knowledge diversity get lost from training and using LLM? (an ongoing <a href]"https://docs.google.com/document/d/167yB9PMSPP5yRnu4_VmWkR3zG0rXRwQApnm5YVNJZag/edit">research aiming for ICLR)</a></li>
     <li>How do we better understand neural networks with mechanistic interpretability, information, and neuroscience?</li>
     <li>What knowledge assistant helps humans to think better?</li>
 </ul>
