--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </p>
 
 <h2>Research</h2>
-You may read my published work on <a href="https://scholar.google.com/citations?user=PuUcZTYAAAAJ&hl=en&oi=ao">Google Scholar</a>.
+You may read my published work on <a href="https://scholar.google.com/citations?user=PuUcZTYAAAAJ&hl=en&oi=ao">Google Scholar.</a>
 My current "Hamming Problems" are:
 <ul>
     <li>How does knowledge diversity get lost from training and using LLM? (an ongoing <a href]"https://docs.google.com/document/d/167yB9PMSPP5yRnu4_VmWkR3zG0rXRwQApnm5YVNJZag/edit">research aiming for ICLR)</a></li>
@@ -53,7 +53,7 @@ I strive to become a "full stack researcher," which, in my definition, is to hav
 Here is <a href="https://docs.google.com/document/d/1lICZ5ftJwZbVLm2f0NockRuwiDryhxRhHEXF4jg76dM/edit">a list of research projects</a> I am interested in working on.
 
 <h2>Contacts</h2>
-I love free-flow research conversations! You may simply book a quick call via Calendly (I blocked deep work, sleep, and private time, so don't worry!)
+I love free-flow research conversations! You may simply book a quick call via <a href="">Calendly. </a> (I blocked deep work, sleep, and private time, so don't worry!)
 You may drop me a very short email at zh378@cam.ac.uk 
 
 <footer>
