--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         body {
             font-family: 'Roboto', sans-serif;
             margin: 10;
+            padding-left: 40px;   /* left and right margin */ 
+            padding-right: 40px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -14,6 +16,10 @@
             text-align: left;
             padding: 20px;
             box-sizing: border-box;
+        }
+        p {
+            line-height: 1.8;  /* spacing */
+            margin: 20px 0; /* Add margin for additional spacing */
         }
         footer {
             position: fixed;
