--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             padding: 20px;
             box-sizing: border-box;
         }
+        a {
+            display: inline;
+        }
         p {
             line-height: 1.8;  /* spacing */
             margin: 20px 0; /* Add margin for additional spacing */
@@ -50,7 +53,7 @@ You may read my published work on <a href="https://scholar.google.com/citations?
 My current "Hamming Problems" are:
 <ul>
     <li>How does knowledge diversity get lost from training and using LLM? (an ongoing <a href]"https://docs.google.com/document/d/167yB9PMSPP5yRnu4_VmWkR3zG0rXRwQApnm5YVNJZag/edit">research aiming for ICLR)</a></li>
-    <li>How do we better understand neural networks with mechanistic interpretability, information, and neuroscience?</li>
+    <li>How do we better understand neural networks with mechanistic interpretability, information theory, and neuroscience?</li>
     <li>What knowledge assistant helps humans to think better?</li>
 </ul>
 
