--- a/index.html
+++ b/index.html
@@ -42,29 +42,32 @@
 <body>
 <h1>Zhonghao He</h1>
 <p>Hi! I am Zhonghao, a master's student at the University of Cambridge.
-    I've been working on topics including agentic risks, alignment, interpretability, and neuroscience (upcoming).
-
-    Ultimately, I want to build AIs for human excellence (in Greek conception), which requires both sound societal mechanism design and epistemic tools with which individuals can better exercise their agency.
-    A lot of effort is required to operationalize those concepts, but broadly these topics are relevant: mechanistic interpretability, computational neuroscience, AI ethics, alignment, political philosophy, virtue ethics, multi-agent systems, AI for science, and human-computer interface.
+</p>
+<p>I've been working on topics including agentic risks, alignment, interpretability, and neuroscience (upcoming).
+</p>
+<p>Ultimately, I want to build AIs for human excellence (in Greek conception), which requires both sound societal mechanism design and epistemic tools with which individuals can better exercise their agency.
+</p>
+<p>A lot of effort is required to operationalize those concepts, but broadly these topics are relevant: mechanistic interpretability, computational neuroscience, AI ethics, alignment, political philosophy, virtue ethics, multi-agent systems, AI for science, and human-computer interface.
 </p>
 
 <h2>Research</h2>
-You may read my published work on <a href="https://scholar.google.com/citations?user=PuUcZTYAAAAJ&hl=en&oi=ao">Google Scholar.</a>
+<p>You may read my published work on <a href="https://scholar.google.com/citations?user=PuUcZTYAAAAJ&hl=en&oi=ao">Google Scholar.</a>
 My current "Hamming Problems" are:
 <ul>
     <li>How does knowledge diversity get lost from training and using LLM? (an ongoing <a href]"https://docs.google.com/document/d/167yB9PMSPP5yRnu4_VmWkR3zG0rXRwQApnm5YVNJZag/edit">research aiming for ICLR)</a></li>
     <li>How do we better understand neural networks with mechanistic interpretability, information theory, and neuroscience?</li>
     <li>What knowledge assistant helps humans to think better?</li>
 </ul>
-
-I strive to become a "full stack researcher," which, in my definition, is to have technical sophistication (experiments, mathematics, and engineering) and deep engagements with problems (technical and societal ones). Building technologies for human betterment is hard, and let's get this one right.
-
-Here is <a href="https://docs.google.com/document/d/1lICZ5ftJwZbVLm2f0NockRuwiDryhxRhHEXF4jg76dM/edit">a list of research projects</a> I am interested in working on.
-
+</p>
+<p>I strive to become a "full stack researcher," which, in my definition, is to have technical sophistication (experiments, mathematics, and engineering) and deep engagements with problems (technical and societal ones). Building technologies for human betterment is hard, and let's get this one right.
+</p>
+<p>Here is <a href="https://docs.google.com/document/d/1lICZ5ftJwZbVLm2f0NockRuwiDryhxRhHEXF4jg76dM/edit">a list of research projects</a> I am interested in working on.
+</p>
 <h2>Contacts</h2>
+<p>
 I love free-flow research conversations! You may simply book a quick call via <a href="">Calendly. </a> (I blocked deep work, sleep, and private time, so don't worry!)
 You may drop me a very short email at zh378@cam.ac.uk 
-
+</p>
 <footer>
     <a href='https://scholar.google.com/citations?user=PuUcZTYAAAAJ&hl=en&oi=ao'>Google Scholar</a> | 
     <a href='https://github.com/hezhonghao'>GitHub</a> | 
