--- a/index.html
+++ b/index.html
@@ -37,19 +37,30 @@
             text-decoration: none;
             color: #000;
         }
+        /* Space between sections */
+        .intro {
+             margin-bottom: 40px; /* More space after intro section */
+        }
+
+        .research {
+            margin-bottom: 40px; /* More space after research section */
+        }
     </style>
 </head>
 <body>
-<h1>Zhonghao He</h1>
-<p>Hi! I am Zhonghao, a master's student at the University of Cambridge.
-</p>
-<p>I've been working on topics including agentic risks, alignment, interpretability, and neuroscience (upcoming).
-</p>
-<p>Ultimately, I want to build AIs for human excellence (in Greek conception), which requires both sound societal mechanism design and epistemic tools with which individuals can better exercise their agency.
-</p>
-<p>A lot of effort is required to operationalize those concepts, but broadly these topics are relevant: mechanistic interpretability, computational neuroscience, AI ethics, alignment, political philosophy, virtue ethics, multi-agent systems, AI for science, and human-computer interface.
-</p>
 
+<div class="intro">
+<h1>Zhonghao He</h1>
+<p>Hi! I am Zhonghao, a master's student at the University of Cambridge.</p>
+
+<p>I've been working on topics including agentic risks, alignment, interpretability, and neuroscience (upcoming).</p>
+
+<p>Ultimately, I want to build AIs for human excellence (in Greek conception), which requires both sound societal mechanism design and epistemic tools with which individuals can better exercise their agency.</p>
+
+<p>A lot of effort is required to operationalize those concepts, but broadly these topics are relevant: mechanistic interpretability, computational neuroscience, AI ethics, alignment, political philosophy, virtue ethics, multi-agent systems, AI for science, and human-computer interface.</p>
+</div>
+
+<div class="Research">
 <h2>Research</h2>
 <p>You may read my published work on <a href="https://scholar.google.com/citations?user=PuUcZTYAAAAJ&hl=en&oi=ao">Google Scholar.</a>
 My current "Hamming Problems" are:
@@ -63,11 +74,15 @@ My current "Hamming Problems" are:
 </p>
 <p>Here is <a href="https://docs.google.com/document/d/1lICZ5ftJwZbVLm2f0NockRuwiDryhxRhHEXF4jg76dM/edit">a list of research projects</a> I am interested in working on.
 </p>
+</div>
+
+<div class="Contact">
 <h2>Contacts</h2>
 <p>
 I love free-flow research conversations! You may simply book a quick call via <a href="">Calendly. </a> (I blocked deep work, sleep, and private time, so don't worry!)
 You may drop me a very short email at zh378@cam.ac.uk 
 </p>
+</div>
 <footer>
     <a href='https://scholar.google.com/citations?user=PuUcZTYAAAAJ&hl=en&oi=ao'>Google Scholar</a> | 
     <a href='https://github.com/hezhonghao'>GitHub</a> | 
