--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <h1>Zhonghao He</h1>
 <p>Hi! I am Zhonghao, a master's student at the University of Cambridge.</p>
 
-<p>I've been working on topics including agentic risks, alignment, interpretability, and neuroscience (upcoming).</p>
+<p>I've been working on topics including <a href]"https://arxiv.org/abs/2302.10329">agentic risks</a>, <a href]"https://alignmentsurvey.com/">alignment</a>, interpretability, and neuroscience (upcoming).</p>
 
 <p>Ultimately, I want to build AIs for human excellence (in Greek conception), which requires both sound societal mechanism design and epistemic tools with which individuals can better exercise their agency.</p>
 
@@ -62,7 +62,8 @@
 
 <div class="Research">
 <h2>Research</h2>
-<p>You may read my published work on <a href="https://scholar.google.com/citations?user=PuUcZTYAAAAJ&hl=en&oi=ao">Google Scholar.</a>
+<p>You may read my published work on <a href="https://scholar.google.com/citations?user=PuUcZTYAAAAJ&hl=en&oi=ao">Google Scholar</a>.</p>
+<p>
 My current "Hamming Problems" are:
 <ul>
     <li>How does knowledge diversity get lost from training and using LLM? (an ongoing <a href]"https://docs.google.com/document/d/167yB9PMSPP5yRnu4_VmWkR3zG0rXRwQApnm5YVNJZag/edit">research aiming for ICLR)</a></li>
@@ -79,7 +80,7 @@ My current "Hamming Problems" are:
 <div class="Contact">
 <h2>Contacts</h2>
 <p>
-I love free-flow research conversations! You may simply book a quick call via <a href="">Calendly. </a> (I blocked deep work, sleep, and private time, so don't worry!). You may drop me a very short email at zh378@cam.ac.uk 
+I love free-flow research conversations! You may simply book a quick call via <a href="calendly.com/hezhonghao">Calendly. </a> (I blocked deep work, sleep, and private time, so don't worry!). You may drop me a very short email at zh378@cam.ac.uk 
 </p>
 </div>
 <footer>
