--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ My current "Hamming Problems" are:
 <div class="Contact">
 <h2>Contacts</h2>
 <p>
-I love free-flow research conversations! You may simply book a quick call via <a href="calendly.com/hezhonghao">Calendly. </a> (I blocked deep work, sleep, and private time, so don't worry!). You may drop me a very short email at zh378@cam.ac.uk 
+I love free-flow research conversations! You may simply book a quick call via <a href="calendly.com/hezhonghao">Calendly </a>. (I blocked deep work, sleep, and private time, so don't worry!). You may drop me an email at zh378@cam.ac.uk 
 </p>
 </div>
 <footer>
