--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <h1>Zhonghao He</h1>
 <p>Hi! I am Zhonghao, a master's student at the University of Cambridge.</p>
 
-<p>I've been working on topics including <a href="https://arxiv.org/abs/2302.10329">agentic risks</a>, <a href="https://alignmentsurvey.com/">alignment</a>, interpretability, and neuroscience (upcoming).</p>
+<p>I've been working on topics including <a href="https://arxiv.org/abs/2302.10329">agentic risks</a>, <a href="https://alignmentsurvey.com/">alignment</a>, <a href="https://arxiv.org/abs/2408.12664">interpretability, and neuroscience</a>.</p>
 
 <p>Ultimately, I want to build AIs for human excellence (in Greek conception), which requires both sound societal mechanism design and epistemic tools with which individuals can better exercise their agency.</p>
 
