--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
 <h1>Zhonghao He</h1>
 <p>Hi! I am Zhonghao, a master's student at the University of Cambridge.</p>
 
-<p>I've been working on topics including <a href="https://arxiv.org/abs/2302.10329">agentic risks</a>, <a href="https://alignmentsurvey.com/">alignment</a>, <a href="https://arxiv.org/abs/2408.12664">interpretability, and neuroscience</a>.</p>
+<p>My research interests started with <a href="https://arxiv.org/abs/2408.12664">interpretability</a> and <a href="https://alignmentsurvey.com/">AI alignment</a>.</p>
 
 <p>Ultimately, I want to build AIs for human excellence (in Greek conception), which requires both sound societal mechanism design and epistemic tools with which individuals can better exercise their agency.</p>
 
-<p>A lot of effort is required to operationalize those concepts, but broadly these topics are relevant: mechanistic interpretability, computational neuroscience, AI ethics, alignment, political philosophy, virtue ethics, multi-agent systems, AI for science, and human-computer interface, and collective intelligence.</p>
+<p>A lot of effort is required to operationalize those concepts, but currently I am actively exloring the following topics: mechanistic interpretability, computational neuroscience, AI ethics, alignment, political philosophy, virtue ethics, multi-agent systems, AI for science, and human-computer interface, and collective intelligence.</p>
 </div>
 
 <div class="Research">
 <h2>Research</h2>
 <p>You may read my published work on <a href="https://scholar.google.com/citations?user=PuUcZTYAAAAJ&hl=en&oi=ao">Google Scholar</a>.</p>
 <p>
-My current "Hamming Problems" are:
+My current "<a href="https://www.cs.virginia.edu/~robins/YouAndYourResearch.html">Hamming Problems</a>" (the most important problems I can work on) are:
 <ul>
-    <li>How does knowledge diversity get lost from training and using LLM? (an ongoing <a href]"https://docs.google.com/document/d/167yB9PMSPP5yRnu4_VmWkR3zG0rXRwQApnm5YVNJZag/edit">research aiming for ICLR)</a></li>
-    <li>How do we better understand neural networks with mechanistic interpretability, information theory, and neuroscience?</li>
-    <li>What knowledge assistant helps humans to think better?</li>
+    <li>How does knowledge diversity get lost from training and using LLM? (an ongoing <a href]"https://docs.google.com/document/d/167yB9PMSPP5yRnu4_VmWkR3zG0rXRwQApnm5YVNJZag/edit"> research paper aiming for ICLR)</a></li>
+    <li>How do we better understand neural networks with mechanistic interpretability, information theory, and neuroscience? (<a href="https://arxiv.org/abs/2408.12664">a survey here</a>)</li>
+    <li>What knowledge assistant helps humans to think better?</li> (exploring this topic in this <a href="https://docs.google.com/document/d/1psEHZkrWzuQMMYVnorSFO8anTczMc5o7beR7JOTIEs4/edit?usp=sharing">doc</a>)</li>
 </ul>
 </p>
 <p>I strive to become a "full stack researcher," which, in my definition, is to have technical sophistication (experiments, mathematics, and engineering) and deep engagements with problems (technical and societal ones). Building technologies for human betterment is hard, and let's get this one right.
