--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <h1>Zhonghao He</h1>
 <p>Hi! I am Zhonghao, a master's student at the University of Cambridge.</p>
 
-<p>My research interests started with <a href="https://arxiv.org/abs/2408.12664">interpretability</a> and <a href="https://alignmentsurvey.com/">AI alignment</a>.</p>
+<p>My research interests started with <a href="https://arxiv.org/abs/2408.12664">interpretability</a> and <a href="https://alignmentsurvey.com/">AI alignment</a>. On the one hand it's about understanding the machines in front of us; on the other hand it's about effective cooperation between humans and machines.</p>
 
 <p>Ultimately, I want to build AIs for human excellence (in Greek conception), which requires both sound societal mechanism design and epistemic tools with which individuals can better exercise their agency.</p>
 
