--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <p>My research interests started with <a href="https://arxiv.org/abs/2408.12664">interpretability</a> and <a href="https://alignmentsurvey.com/">AI alignment</a>. On the one hand it's about understanding the machines in front of us; on the other hand it's about effective cooperation between humans and machines.</p>
 
-<p>Ultimately, I want to build AIs for human excellence (in Greek conception), which requires both sound societal mechanism design and epistemic tools with which individuals can better exercise their agency.</p>
+<p>Ultimately, I want to build AIs for human excellence (or "arete", in Greek conception), which requires both sound societal mechanism design and epistemic tools with which individuals can better exercise their agency.</p>
 
 <p>A lot of effort is required to operationalize those concepts, but currently I am actively exloring the following topics: mechanistic interpretability, computational neuroscience, AI ethics, alignment, political philosophy, virtue ethics, multi-agent systems, AI for science, and human-computer interface, and collective intelligence.</p>
 </div>
